--- a/Gelf4net/Gelf4net.csproj
+++ b/Gelf4net/Gelf4net.csproj
@@ -55,13 +55,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Appender\Gelf4NetAppender.cs" />
-    <Compile Include="Appender\GelfJsonBuilder.cs" />
-    <Compile Include="Appender\GelfMessage.cs" />
+    <Compile Include="AmqpGelfAppender.cs" />
+    <Compile Include="GelfAppenderBase.cs" />
+    <Compile Include="UdpGelfAppender.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Transport\AmqpTransport.cs" />
-    <Compile Include="Transport\GelfTransport.cs" />
-    <Compile Include="Transport\UdpTransport.cs" />
+    <Compile Include="Transport\AmqpGelfTransport.cs" />
+    <Compile Include="Transport\GelfTransportBase.cs" />
+    <Compile Include="Transport\UdpGelfTransport.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
